# tcbot

./: .dockerignore  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PLAN.md  PRD.md  PROMPT.md  README.md  TASK.md  c.env  c.env.example  config.env  config.env.example  docker-compose.yml  pyproject.toml  replit.md  replit.nix  requirements.txt  sed9NMdh0  skills-lock.json
.agents/: CLAUDE.md  REPLIT.md  RUFF.md  RULES.md  STYLE-CODE.md  STYLE-COMMENTS.md  TEST-RUFF.md  WORKFLOW.md  mcp.json
.agents/agents/: coordinator.md  debug-investigator.md  docs-and-skills-editor.md  general-operator.md  implementation-helper.md  project-explorer.md  review-guardian.md  validation-runner.md
.agents/memory/: MEMORY.md  ai-moderation-prd.md  ai-moderation-reuse-audit.md  ai-moderation-vision.md  apscheduler4-integration.md  context.md  context7-setup.md  conv-handler-test-patterns.md  conversation-flow-gaps.md  decisions.md  kilo-gateway.md  pagination-refactor.md  progress.md  replit-nix-store.md  replit-test-runner.md  sequential-await-audit.md  structure.md
.agents/rules/: CLAUDE.md  RUFF.md  RULES.md  STYLE-CODE.md  STYLE-COMMENTS.md  WORKFLOW.md  context7.md
.github/workflows/: auto-fix.yml  codeql.yml  dependency-update.yml  lint.yml  performance.yml  run-bot.yml  run-tdd.yml  verification.yml
.roo/: mcp.json
.zed/: settings.json
agents/: CLAUDE.md  REPLIT.md  RULES.md  STYLE-CODE.md  STYLE-COMMENTS.md  TEST-RUFF.md  WORKFLOW.md
agents/agents/: coordinator.md  debug-investigator.md  docs-and-skills-editor.md  general-operator.md  implementation-helper.md  project-explorer.md  review-guardian.md  validation-runner.md
attached_assets/: PROMPT_1777468107221.md  PROMPT_1777480857266.md  Pasted-HELP-CONTENT-dict-str-tuple-str-str-help-ban-Ban-code-t_1777741532625.txt  RULES_1777468107456.md  RULES_1777480857521.md
docs/: README.md  agent-guidelines.md  appeal-detailed.md  architecture.md  backup-restore.md  banning-detailed.md  button-styles.md  check-detailed.md  demote-detailed.md  development.md  git-commit.md  mapping.md  modules.md  performance.md  promote-detailed.md  role-detailed.md  setup.md  stats-detailed.md  warnings-detailed.md  workflows-guide.md  workflows.md
fed-rules/: 01-18-plus.md  02-admin-federation.md  03-admin-power.md  04-admin-group.md  05-cheat.md  06-crypto.md  07-doxing-privacy.md  08-drugs.md  09-fundraising-abuse.md  10-group-ownership.md  11-gambling.md  12-harmful-modules.md  13-keybox.md  14-hate-speech.md  15-license-claiming.md  16-nickname-pfp.md  17-monopoly-hoax.md  18-root-module.md  19-phishing.md  20-piracy.md  21-promotion.md  22-provocateur.md  23-racism-sara.md  24-politics.md  25-scam-ripper.md  26-spam-flooding.md  27-unethical-marketing.md
spr-bot-reference/: sample_config.py
tcbot/: __init__.py  __main__.py  alive.py  config.py
tests/: __init__.py  conftest.py  test_about.py  test_additional.py  test_admins.py  test_admins_mod.py  test_alive.py  test_appeal_flow.py  test_appeals.py  test_appeals_pure.py  test_ban_flow.py  test_ban_info.py  test_banning.py  test_bans_db.py  test_broadcasting.py  test_cache.py  test_check_flow.py  test_checking.py  test_config_parse.py  test_connected_flow.py  test_connecting.py  test_decorators.py  test_demote_flow.py  test_disconnecting.py  test_dispatch.py  test_documents.py  test_error_reporter.py  test_extraction.py  test_format.py  test_formatter.py  test_greeting.py  test_groups.py  test_groups_db.py  test_help.py  test_identity.py  test_init.py  test_keyboards.py  test_kick_flow.py  test_kicking.py  test_kicks_db.py  (+36 more)
tgbot_tcf/: __init__.py  __main__.py  config.py  keepalive.py
(+201 files in other folders)
