[project]
name = "tcbot"
version = "4.1.1"
description = "TCF | Transsion Core Federation - Telegram Bot"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot",
    "motor",
    "flask",
    "python-dotenv",
    "redis[hiredis]",
    "apscheduler[mongodb]>=4.0.0a1",
    "cbor2",
    "cachetools>=7.1.4",
    "speedtest-cli",
]

[dependency-groups]
dev = ["ruff"]

[tool.setuptools.packages.find]
include = ["tcbot*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".local/", ".agents/", ".kilo/", ".trae/", ".roo/", ".claude/", "attached_assets/"]

[tool.ruff.lint]
select = ["B", "C4", "D", "E4", "E7", "E9", "F", "FBT", "I", "PERF", "PIE", "PLC", "PLE", "PTH", "RET", "RUF", "SIM", "TC", "TRY400", "TRY401", "UP", "W"]
ignore = [
    "D203",    # Conflicts with D211 (no-blank-line-before-class); D211 is preferred
    "D213",    # Conflicts with D212 (multi-line-summary-first-line); D212 is preferred
    "TC001",   # Application imports in TYPE_CHECKING: internal TypedDicts used in runtime dict ops
    "UP047",   # Generic functions: TypeVar-based style kept for ratelimiter compatibility
]
