[project]
name = "tcbot"
version = "5.2.6"
description = "TCF | Transsion Core Federation - Telegram Bot"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot[rate-limiter]>=22.8,<23",
    "motor>=3.7,<4",
    "flask>=3.1,<4",
    "python-dotenv>=1.2,<2",
    "redis[hiredis]>=8.0,<9",
    "apscheduler[mongodb]==4.0.0a6",
    "cbor2>=6.1,<7",
    "cachetools>=7.1,<8",
    "speedtest-cli>=2.1,<3",
]

[dependency-groups]
dev = ["ruff"]

[tool.setuptools.packages.find]
include = ["tcbot*"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [".local/", ".agents/", ".kilo/", ".trae/", ".roo/", ".claude/", "attached_assets/"]

[tool.ruff.lint]
select = ["B", "C4", "D", "E4", "E7", "E9", "F", "FBT", "I", "PERF", "PIE", "PLC", "PLE", "PTH", "RET", "RUF", "SIM", "TC", "TRY400", "TRY401", "UP", "W"]
ignore = [
    "D203",    # Conflicts with D211 (no-blank-line-before-class); D211 is preferred
    "D213",    # Conflicts with D212 (multi-line-summary-first-line); D212 is preferred
    "TC001",   # Application imports in TYPE_CHECKING: internal TypedDicts used in runtime dict ops
    "UP047",   # Generic functions: TypeVar-based style kept for ratelimiter compatibility
]
